# cmp9767-robot_project_limo-main

./: .gitignore  cmp9767-robot_project_limo.code-workspace  insert_red_object.py  my_map.yaml  my_map_obstacle2.pgm  my_map_obstacle2.yaml  run_launch.sh
maps/: my_map.pgm  my_map_obstacle.pgm  my_map_obstacle.yaml  rally_obstacle_map.pgm  rally_obstacle_map.yaml
src/: rally1.world  rally_obstacle.world  rally_obstacle5.world
src/building.world/: model.config  model.sdf
src/config/: mapper_params_online_async.yaml
src/gazebo world/: rally_obstacle.world  rally_obstacle2.world  rally_obstacle3.world  rally_obstacle4.world  world
src/models/fire extinguisher 2/: model.sdf
src/models/fire_extinguisher/: model.config  model.sdf
src/models/first_aid_kit/: model.config  model.sdf
src/navigation/: demo_inspection.py  limo_nav2.rviz  package.xml  setup.cfg  setup.py
src/navigation/navigation/: frontier_detector.py  frontier_explorer_node.py  frontrier_explore.py  waypoint_nav.py
src/perception/: package.xml  setup.py
src/perception/perception/: controller_vision.py  detector_advanced.py  detector_basic.py  inventory_aggregator.py  notes  object_localizer.py
src/perception/trial worlds/: maze.world  rally.world
src/results tf/: frames_2025-12-11_17.23.12.gv  frames_2025-12-11_21.30.57.gv
trial worlds/: building1.world
