<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>navigation</name>
  <version>0.0.1</version>
  <description>Waypoint and autonomous navigation package</description>

  <maintainer email="omarseraj17@gmail.com">omar</maintainer>
  <license>Apache-2.0</license>

  <!-- 🔴 THIS WAS MISSING (CRITICAL) -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  
  <depend>nav2_simple_commander</depend>

  <!-- Test dependencies (optional) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

